apps/lubelogger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lubelogger
  labels:
    gateway-access: lubelogger
