apps/lubelogger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubelogger
  namespace: lubelogger
  labels:
    app: lubelogger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lubelogger
  template:
    metadata:
      labels:
        app: lubelogger
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
      - name: lubelogger
        image: ghcr.io/hargata/lubelogger:v1.7.3@sha256:c9d2bbb48c7f84d90e54496e2cd60422e56a5f2345c8a539ebe09f77e629d321
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /App/data
          name: data-volume
        - mountPath: /root/.aspnet/DataProtection-Keys
          name: keys-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: data-pvc
      - name: keys-volume
        persistentVolumeClaim:
          claimName: key-pvc
