apps/lubelogger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger
  namespace: lubelogger
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: lubelogger
