apps/lubelogger/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lubelogger-route
  namespace: lubelogger
spec:
  parentRefs:
  - name: ingress-gateway
    namespace: cluster-gateway 
    sectionName: lubelogger-https
  hostnames:
  - "lubelogger.hoareau-marion.eu"
  rules:
  - backendRefs:
    - name: lubelogger
      port: 8080
